# dengue_fever

./: README.md  README_auto_generated.md  dengue_features_test.csv:Zone.Identifier  dengue_features_train.csv:Zone.Identifier  dengue_labels_train.csv:Zone.Identifier  pyproject.toml  requirements.txt  stats.json  submission_format.csv:Zone.Identifier
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_data_science.yml
notebooks/: Analysis_m.ipynb  dengAI_solution_v1.ipynb  dengAI_solution_v2.ipynb  submission.csv  submission_V3.csv
src/dengue_fever/: __init__.py  __main__.py  settings.py
src/dengue_fever/pipelines/data_processing/: nodes.py  pipeline.py
src/dengue_fever/pipelines/data_science/: nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
